Migrate users of String.format()
Use String.formatted() instead.

Change-Id: I5f9696341c99adf3f8481f113990ef4f79fdb635
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>